<resources>
    <string name="app_name">ComponentesBasicos 2.0</string>
    <string name="enviar">Enviar</string>
    <string name="naruto">Naruto</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="limpar">Limpar</string>
    <string name="anime_favorito">Anime favorito:</string>
    <string name="hunter_x_hunter">Hunter x Hunter</string>
    <string name="attack_on_titan">Attack on Titan</string>
    <string name="sexo">Sexo:</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="cadastro_de_usu_rio">Cadastro de Usuário</string>
    <string name="qual_sua_for_a_de_vontade">Qual sua força de vontade?</string>
    <string name="numa_escala_de_0_a_10">Numa escala de 0 a 10</string>
</resources>